--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "tsmodels",
   "version": "0.2.7",
   "description": "An implementation of models for TypeScript",
-  "main": "index.ts",
+  "main": "package/index.js",
+  "typings": "package/index.d.ts",
   "scripts": {
+    "package": "rimraf package && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +23,10 @@
   "homepage": "https://github.com/ikasparov/tsmodels#readme",
   "peerDependencies": {
     "typescript": "^2.0.0"
+  },
+  "devDependencies": {
+    "awesome-typescript-loader": "^3.4.1",
+    "typescript": "^2.7.1",
+    "webpack": "^3.10.0"
   }
 }
