--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tsmodels",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "An implementation of models for TypeScript",
+  "keywords": "typescript ts model angular ngx angular-models aliases convert instance",
   "main": "package/index.js",
   "typings": "package/index.d.ts",
   "scripts": {
